k8s/02-server-configure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: devops-pms
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server-container
          image: server-test:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4500
          readinessProbe:
            httpGet:
              path: /health
              port: 4500
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 4500
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: devops-pms
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4500
      targetPort: 4500
  type: ClusterIP
