k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-ingress
  namespace: devops-pms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx # specifies the ingress controller to use in a multiple ingress controller environment
  rules:
    - host: pms.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 4500

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
